@@ -33,6 +33,8 @@ Unreleased
    HBASE-490   Doubly-assigned .META.; master uses one and clients another
    HBASE-496   impossible state for createLease writes 400k lines in about 15mins
    HBASE-472   Passing on edits, we dump all to log
+   HBASE-79    When HBase needs to be migrated, it should display a message on
+               stdout, not just in the logs
 
   IMPROVEMENTS
    HADOOP-2555 Refactor the HTable#get and HTable#getRow methods to avoid
